--- a/styles.css
+++ b/styles.css
@@ -2,34 +2,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
-}
-
-.header {
-  height: 72px;
-  background: darkmagenta;
-  color: white;
-}
-
-.footer {
-  height: 72px;
-  background: #eee;
-  color: darkmagenta;
-}
-
-.sidebar {
-  width: 300px;
-  background: royalblue;
-}
-
-.card {
-  border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-  border-radius: 4px;
-}
-
-/* SOLUTION */
-
-body {
   display: flex;
   flex-direction: column;
 }
@@ -37,10 +9,50 @@ body {
 .header {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 0 16px;
   font-size: 32px;
   font-weight: 900;
+  height: 72px;
+  background:rgb(0, 39, 101);
+  color: white;
 }
+a {
+  font-size: 25px;
+  color: white;
+  padding: 8px;
+  /* this removes the line under the links */
+  text-decoration: none;
+}
+ul {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
+  /* this removes the dots on the list items*/
+  list-style-type: none;
+}
+
+
+.footer {
+  height: 72px;
+  background: #eee;
+  color: rgb(0, 0, 0);
+}
+
+.sidebar {
+  width: 300px;
+  background: rgb(0, 39, 101);
+}
+
+.card {
+  border: 1px solid rgb(0, 39, 101);
+  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  border-radius: 4px;
+  background-color: rgb(255, 255, 255);
+}
+
+
 
 .body {
   flex: 1;
@@ -52,26 +64,11 @@ body {
   padding: 16px;
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  margin-bottom: 16px;
-}
-
-a {
-  color: white;
-  text-decoration: none;
-  font-size: 24px;
-}
-
 .container {
   padding: 32px;
   display: flex;
   flex-wrap: wrap;
+
 }
 
 .card {
@@ -85,3 +82,4 @@ a {
   align-items: center;
   justify-content: center;
 }
+
