--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  font-family:'Times New Roman', Times, serif;
+}
+.hero {
+  flex: 1;
+  display: flex;
 }
 
 .header {
@@ -11,11 +15,17 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 0 16px;
-  font-size: 32px;
+  font-size: 35px;
   font-weight: 900;
-  height: 72px;
+  height: 75px;
   background:rgb(0, 39, 101);
   color: white;
+}
+.my-name{
+  text-align: center;
+  padding-left: 30px;
+  font-size: 50px;
+  padding-top: 20px;
 }
 a {
   font-size: 25px;
@@ -32,54 +42,78 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
 }
-
-
-.footer {
-  height: 72px;
-  background: #eee;
-  color: rgb(0, 0, 0);
-}
-
 .sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-shrink: 0;
+  padding: 50px;
   width: 300px;
   background: rgb(0, 39, 101);
+  color: white;
+  font-size: 20px;
 }
+.skills-icon{
+  font-size: 55px;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  background-color: bisque;
+  
+}
+.my-work{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 72px;
+  font-size: 50px;
+  background-color: bisque;
+  color: rgb(0, 0, 0);
+  font-family:cursive;
+}
+.cards{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 
+}
 .card {
   border: 1px solid rgb(0, 39, 101);
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
   background-color: rgb(255, 255, 255);
-}
-
-
-
-.body {
-  flex: 1;
-  display: flex;
-}
-
-.sidebar {
-  flex-shrink: 0;
-  padding: 16px;
-}
-
-.container {
-  padding: 32px;
-  display: flex;
-  flex-wrap: wrap;
-
-}
-
-.card {
   padding: 16px;
   margin: 16px;
-  width: 300px;
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.card-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 16px;
+  font-size: 30px;
+  font-weight: 800;
+  height: 60px;
+  width: 400px;
+  background:rgb(3, 103, 18);
+  color: white;
 }
 
 .footer {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 72px;
+  background:rgb(0, 39, 101);
+  color: rgb(255, 255, 255);
 }
 
